--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sinemah/ray-js",
-  "version": "0.5.1",
+  "version": "0.5.3",
   "description": "spatie ray JavaScript implementation",
   "main": "index.esm.js",
   "scripts": {
@@ -21,5 +21,9 @@
   },
   "devDependencies": {
     "express": "^4.18.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SineMah/ray-js.git"
   }
 }
